--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,19 +13,20 @@ bootloader = "0.9.8"
 volatile = "0.2.6"
 spin = "0.5.2"
 x86_64 = "0.14.2"
+uart_16550 = "0.2.0"
 
 [dependencies.lazy_static]
 version = "1.0"
 features = ["spin_no_std"]
 
 [package.metadata.bootimage]
-test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
+test-args = [
+    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
+    "-display", "none"
+]
+test-success-exit-code = 33 #(0x10 << 1) | 1
 
-# Profile for development aka `cargo build`, so we disable stack unwinding on panic
-#[profile.dev]
-#panic = "abort"
-
-# Profile for release aka `cargo build --release`, so we disable stack unwinding on panic
-#[profile.release]
-#panic = "abort"
+[[test]]
+name = "should_panic"
+harness = false
 
